Fix the site on smaller screens

--- a/src/sass/_about-us.scss
+++ b/src/sass/_about-us.scss
@@ -5,9 +5,11 @@
 	color: $color-light;
 	height: 800px;
 	position: relative;
+	width: 100%;
 }
 
 .about-us-title h2 {
+	padding-top: 100px;
 	color: $color-main;
 	text-align: center;
 	letter-spacing: 8px;
@@ -18,7 +20,8 @@
 	content: '';
 	display: block;
 	margin: 0 auto;
-	width: 600px;
+	max-width: 600px;
+	width: 100%;
 	height: 5px;
 	background-color: $color-main;
 }
@@ -28,7 +31,6 @@
 		url('../images/about-us.jpg');
 	background-size: cover;
 	color: $color-light;
-	height: 600px;
 	position: relative;
 
 	.about-us-container {
@@ -39,7 +41,7 @@
 }
 .carousel-item div {
 	display: flex;
-	padding: 80px;
+	padding: 100px;
 
 	img {
 		width: 200px;
@@ -62,4 +64,25 @@
 }
 .carousel-control-prev {
 	max-width: 1100px;
+}
+@media only screen and (max-width: 600px) {
+	.carousel-item div {
+		flex-direction: column;
+		padding-top: 20px;
+		width: 100%;
+	}
+	h4 {
+		display: flex;
+		font-weight: $font-bold;
+	}
+	img {
+		margin-top: 20px;
+	}
+	p {
+		// display: flex;
+		// flex-direction: column;
+	}
+	.about-us-title h2 {
+		padding-top: 20px;
+	}
 }
