--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	width: 100%;
 	grid-gap: 100px;
 	margin-top: 50px;
 	margin-bottom: 50px;
@@ -48,4 +49,9 @@
 .products-title {
 	font-size: 30px;
 	font-weight: $font-semibold;
+}
+@media only screen and (max-width: 600px) {
+	.products-image {
+		width: 100%;
+	}
 }
